# azureml-sample

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
outputs/model/: model.joblib
src/: train.py
