[project]
name = "azureml-sample"
version = "0.1.0"
description = ""
authors = [
    {name = "Pol John Cruz",email = "poljohncruz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn (>=0.44.0,<0.45.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
